--- a/pc/package.json
+++ b/pc/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "antd": "^4.2.5",
     "axios": "^0.19.2",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
@@ -47,6 +48,7 @@
     "less": "^3.11.1",
     "less-loader": "^6.1.0",
     "mini-css-extract-plugin": "0.9.0",
+    "moment": "^2.26.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
