--- a/pc/package.json
+++ b/pc/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node scripts/start.js",
+    "dev": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
