--- a/pc/package.json
+++ b/pc/package.json
@@ -28,6 +28,9 @@
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "draft-js": "^0.11.6",
+    "draftjs-to-html": "^0.9.1",
+    "draftjs-to-markdown": "^0.6.0",
     "echarts": "^4.8.0",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
@@ -37,8 +40,10 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "exif-js": "^2.3.0",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
+    "html-to-draftjs": "^1.5.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
@@ -60,6 +65,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
